--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "animatedtxt": "^1.3.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "^12.0.4",
